IRtest_out/global_init_expr.err
irs/global_init_expr.ll:11:58: error: '@C41' defined with type '<{ i32, i32, i32, [6 x i32] }>*' but expected '[3 x [3 x i32]]*'
  %v47 = getelementptr [3 x [3 x i32]], [3 x [3 x i32]]* @C41, i32 0, i32 0, i32 0
                                                         ^
1 error generated.
